ingress-rules.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /httpd
        backend:
          serviceName: httpd
          servicePort: 80
      - path: /nginx
        backend:
          serviceName: nginx
          servicePort: 80
